@@ -349,6 +349,7 @@ function meta:ChangeTeam(t)
 end
 
 function meta:ResetDMCounter()
+	if not ValidEntity(self) then return
 	self.kills = 0
 	return true
 end
